examples/fail/dsgdb9nsd_000009_200p.xyz
4

C	0.00209 0.00951 0.00201
C	0.01834 -1.19181 -0.00451
H	0.3144871988772787 -0.7164334921525293 0.43260730182041385
H	-0.15257318221351057 -1.9072708116941235 0.5140500361343299
